tests/fixtures/invalid/max_bool_set.py
# Cannot call max() with Bool, Set[int]
x = max(True, {1, 2, 3})
